--- a/crowd-voice-front-end-project/src/client/assets/sass/_app-base.scss
+++ b/crowd-voice-front-end-project/src/client/assets/sass/_app-base.scss
@@ -447,7 +447,7 @@ a:hover{
 }
 
 .alert-component {
-    position: sticky;
+    position: relative;
     z-index: 9999;
     text-align: center;
 }
