--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <h2 class="text-muted">Dashboard <small>Statistics Overview</small></h2>
+    <h2 class="text-muted">Trending <small>Projects</small></h2>
     <div class="row">
         <div class="col-md-12">
             <carousel [interval]="myInterval" [noWrap]="noWrapSlides">
