--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -6,8 +6,8 @@
                 <slide *ngFor="let slidez of slides;let index=index" [active]="slidez.active">
                     <img [src]="slidez.image">
                     <div class="carousel-caption">
-                        <h4>Slide {{index}}</h4>
-                        <p>{{slidez.text}}</p>
+                        <h4>{{slidez.title}}</h4>
+                        <p>{{slidez.description}}</p>
                     </div>
                 </slide>
                 <i class="fa fa-chevron-left left carousel-control"></i>
