--- a/crowd-voice-front-end-project/src/client/app/dashboard/userProfile/userProfile.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/userProfile/userProfile.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="float: left;">
 	<div>
 		<div class="col-lg-4 col-lg-offset-4">
 			<img src="assets/img/prof.png" width="150px" class="user-avatar" />
@@ -12,7 +12,7 @@
 
 			<nav class="navbar navbar-light bg-faded">
 				<button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
-                ☰
+                
                 </button>
 				<div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
 					<a class="navbar-brand" href="javascript:;">See:</a>
@@ -23,12 +23,50 @@
 						<li class="nav-item-elements nav-item">
 							<a class="nav-link nav-link-elements" href="javascript:;">Donations</a>
 						</li>
-						
+
 					</ul>
+					<br>
+					<br>
+					<br>
+					
+					<div class="card card-block">
+						<table class="table table-sm">
+							<thead>
+								<tr>
+									<th>#</th>
+									<th>Project Name</th>
+									<th>Project Category</th>
+									<th>Money claimed</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<th scope="row">1</th>
+									<td>Flying Cat</td>
+									<td>Art</td>
+									<td>15000$</td>
+								</tr>
+								<tr>
+									<th scope="row">2</th>
+									<td>Dancing Monitor</td>
+									<td>Science</td>
+									<td>2000$</td>
+								</tr>
+								<tr>
+									<th scope="row">2</th>
+									<td>3D gun printer</td>
+									<td>Science</td>
+									<td>5000$</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+
+					
 				</div>
 			</nav>
-			
-            <br/>
+
+			<br/>
 
 			<a class="btn rounded-btn" routerLink="/userProfile" (click)="clicktest()"> Edit your profile </a>
 
