--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
@@ -1,9 +1,9 @@
-<h1>All Projects</h1>
+<h1>All Projects Page</h1>
 <div class="row">
 	<div *ngFor="let project of projects" class="col-md-12">
 		<div class="card card-primary card-inverse">
 			<div class="card-header card-primary">
-				<a href="#" [routerLink]="['/dashboard/project/view', project.Id]">
+				<a href="#" [routerLink]="['/dashboard/projects/view', project.Id]">
 					{{project.Title}}
 				</a>
 			</div>
