--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectCreate.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectCreate.component.html
@@ -7,7 +7,7 @@
             </h2>
             <ol class="breadcrumb">
                 <li>
-                    <i class="fa fa-dashboard"></i>  <a href="Javascript:void(0)" routerLink="/dashboard/home">Dashboard</a>
+                    <i class="fa fa-dashboard"></i>  <a href="Javascript:void(0)" routerLink="/dashboard/home">Home</a>
                 </li>
                 <li class="active">
                     <i class="fa fa-edit"></i> Create New Project
@@ -94,7 +94,9 @@
 					<span class="sr-only">Loading...</span>
 				</span>
                 
-                <button type="reset" class="btn btn-secondary" (click)="form.reset()">Reset</button>
+                <!--
+                    <button type="reset" class="btn btn-secondary" (click)="form.reset();">Reset</button>
+                -->
 
             </form>
 
