--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
@@ -2,6 +2,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="jumbotron" *ngIf="project">
+			<a *ngIf="isRequestorProjectCreator"  [routerLink]="['/dashboard/projects/edit', project.Id]">Edit Project</a>
 			<h1>{{project.Title}}</h1>
 			<p>{{project.Description}}</p>
 			<p>Created on: {{project.CreatedDate | amDateFormat:'LL'}}</p>
