--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
@@ -31,4 +31,21 @@
 			</span>
 		</div>
 	</div>
+	<div class="row">
+		<div class="jumbotron" *ngIf="fundingPackages && fundingPackages.length > 0">
+			<div class="project-creator-options" *ngIf="isRequestorProjectCreator">
+				<a [routerLink]="['/dashboard/projects/', project.Id, 'fundingPackages', 'create']">Create Funding Package</a>
+				<hr/> 
+			</div>
+			<span *ngFor="let fundingPackage of fundingPackages">
+				<a *ngIf="update.IsRequestorProjectCreator" [routerLink]="['/dashboard/projects/', project.Id, 'fundingPackages', fundingPackage.Id, 'edit']">Edit Funding Package</a>
+				<h1>{{fundingPackage.Title}}</h1>
+				<p>Reward: {{fundingPackage.Description}}</p>
+				<p *ngIf="fundingPackage.PledgeAmount">Pledge Amount: {{fundingPackage.PledgeAmount}}</p>
+				<p><i class="fa fa-clock-o"></i> {{fundingPackage.WhenDateTime | amDateFormat:'LL'}}</p>
+				<p><i class="fa fa-clock-o"></i> Estimated Delivery Date: {{fundingPackage.EstimatedDeliveryDate | amDateFormat:'LL'}}</p>
+				<hr/>
+			</span>
+		</div>
+	</div>
 </div>	
