--- a/crowd-voice-front-end-project/src/client/app/signup/signup.component.html
+++ b/crowd-voice-front-end-project/src/client/app/signup/signup.component.html
@@ -18,16 +18,16 @@
 						</div>
 					</div>
 
-					<!--<div class="form-group" [ngClass]="{ 'has-error': registerUserForm.submitted && !email.valid }">
-						<label for="email">EMAIL</label>
+					<div class="form-group" [ngClass]="{ 'has-error': registerUserForm.submitted && !name.valid }">
+						<label for="name">FULL NAME</label>
 						<input type="text" class="form-control input-underline input-lg" 
-							name="email" id="email" placeholder="Enter your email..."
-							required [(ngModel)]="user.email"
-							#email="ngModel">
-						<div [hidden]="email.valid || email.pristine" class="error">
-							Email is required my good sir/lady!
+							name="name" id="name" placeholder="Enter your full name..."
+							required [(ngModel)]="user.name"
+							#name="ngModel">
+						<div [hidden]="name.valid || name.pristine" class="error">
+							Full name is required my good sir/lady!
 						</div>
-					</div>-->
+					</div>
 
 					<div class="form-group" [ngClass]="{ 'has-error': registerUserForm.submitted && !password.valid }">
 						<label for="password">PASSWORD</label>
