--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
@@ -1,15 +1,28 @@
-<h1>All Projects Page</h1>
-<div class="row">
-	<div *ngFor="let project of projects" class="col-md-12">
-		<div class="card card-primary card-inverse">
-			<div class="card-header card-primary">
-				<a href="#" [routerLink]="['/dashboard/projects/view', project.Id]">
-					{{project.Title}}
-				</a>
-			</div>
-			<div class="card-block bg-white">
-				{{project.Description}}
-			</div>
-		</div>
+<div *ngIf="title" class="row">
+	<div class="col-lg-12">
+		<h2 class="page-header">
+			{{title}}
+		</h2>
+		<ol class="breadcrumb">
+			<li>
+				<i class="fa fa-dashboard"></i>  <a href="Javascript:void(0)" routerLink="/dashboard/home">Home</a>
+			</li>
+			<li class="active">
+				<i class="fa fa-profile"></i> {{title}}
+			</li>
+		</ol>
 	</div>
+</div>
+<div *ngFor="let project of projects">
+	<div class="col-lg-12 jumbotron card card-block">
+		<h3><a [routerLink]="['/dashboard/projects/view', project.Id]">{{project.Title}}</a></h3>
+		<p>{{project.Description}}</p>
+		<p>Created on: {{project.CreatedDate | amDateFormat:'LL'}}</p>
+		<p>Updated on: {{project.UpdatedDate | amDateFormat:'LL'}}</p>
+		<p>Funding Goal: {{project.FundingGoal}}</p>
+		<p>Funding End Date: {{project.FundingEndDate | amDateFormat:'LL'}}</p>
+		<p>Project Owner: <a [routerLink]="['/dashboard/user/viewProfile', project.OwnerId]">{{project.OwnerName}}</a></p>
+		<p>Project Category: {{project.ProjectCategoryDesc}}</p>
+	</div>
+	<hr/>
 </div>
