--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectSearch.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectSearch.component.html
@@ -15,16 +15,42 @@
             </ol>
         </div>
     </div>
-	<div class="form-group">
-		<select class="form-control input-underline input-lg"
-			name="projectCategoryId" id="projectCategoryId"
-			(change) = "onChange(projectCategoryId.value)"
-			#projectCategoryId>
-			<option [value]="0" selected> - Select Project Category to Search - </option>
-			<option *ngFor="let option of projectCategoryOptions" [value]="option.Id">{{option.Name}}</option>
-		</select>
+    
+    
+    <div class="row">
+		<div class="col-lg-12">
+			<div class="card card-block" (click)="$event.preventDefault()">
+				<tabset>
+					<br/>
+					<tab heading="Search by Category">
+						<div class="form-group">
+							<select class="form-control input-underline input-lg"
+								name="projectCategoryId" id="projectCategoryId"
+								(change) = "onChange(projectCategoryId.value)"
+								#projectCategoryId>
+								<option [value]="0" selected> - Select Project Category to Search - </option>
+								<option *ngFor="let option of projectCategoryOptions" [value]="option.Id">{{option.Name}}</option>
+							</select>
+						</div>
+					</tab>
+					<tab heading="Search by Name">
+						<div class="form-group">
+							<input type="text" class="form-control input-underline input-lg" 
+								name="searchTerm" id="searchTerm" placeholder="Enter Name to search Project..."
+								(keyup)="searchByName(searchTerm.value)"
+								#searchTerm />
+						</div>
+					</tab>
+				</tabset>
+			</div>
+		</div>
 	</div>
-	<span *ngIf="projects && projects.length > 0">
+    <span *ngIf="projects && projects.length > 0">
 		<all-projects-list [projects]="projects"></all-projects-list>
+	</span>
+	<span *ngIf="projects && projects.length == 0">
+		<div class="alert alert-info">
+			I am sorry. No projects were found to match your search criteria.
+		</div>
 	</span>
 </div>
