Implemented Dedicated Project Statistics Screen for Project Creators

--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
@@ -28,7 +28,9 @@
                 <li>
                     <a [routerLink]="['/dashboard/projects/', project.Id, 'fundingPackages', 'create']">Create Funding Package</a>
                 </li>
-				
+				<li>
+                    <a [routerLink]="['/dashboard/projects/', project.Id, 'projectStatScreen']">Observe Project Stats</a>
+                </li>
             </ol>
         </div>
 		<hr/>
