--- a/crowd-voice-front-end-project/src/client/app/dashboard/user/userEdit.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/user/userEdit.component.html
@@ -44,14 +44,14 @@
                 </fieldset>
                 <!--short bio input -->
                 <fieldset class="form-group" [ngClass]="{ 'has-error': editUserForm.submitted && !shortBio.valid }">
-                    <label for="shortBio">Description</label>
+                    <label for="shortBio">Short Bio</label>
                     <textarea class="form-control input-underline input-lg" 
                         name="shortBio" id="shortBio" placeholder="Enter your Short Bio..."
                         required [(ngModel)]="user.ShortBio" rows="6"
                         #description="ngModel"></textarea>               
                 </fieldset>
                 <!--loading-->
-                <button *ngIf="!loading" class="btn btn-primary" type="submit" [disabled]= "!editUserForm.form.valid">Edit Profile</button>
+                <button *ngIf="!loading" class="btn btn-primary" type="submit" [disabled]= "!editUserForm.form.valid">Save</button>
 				<span *ngIf="loading">
 					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
 					<span class="sr-only">Loading...</span>
