--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -17,7 +17,7 @@
     </div>
     <hr>
     <div class="row">
-        <div class="col-xl-3 col-lg-6">
+        <div class="col-xl-6 col-lg-6">
             <div class="card card-primary card-inverse">
                 <div class="card-header card-primary">
                     <div class="row">
@@ -25,21 +25,20 @@
                             <i class="fa fa-comments fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-xs-right">
-                            <div class="huge">26</div>
-                            <div>New Comments!</div>
+                            <div>All Projects</div>
                         </div>
                     </div>
                 </div>
                 <div class="card-footer card-default">
-                    <a href="javascript:;">
-                        <span class="pull-xs-left">View Details</span>
+                    <a [routerLink]="['/dashboard/projects/all']">
+                        <span class="pull-xs-left">Go!</span>
                         <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
                     </a>
                 </div>
             </div>
         </div>
-        <div class="col-xl-3 col-lg-6">
+        <div class="col-xl-6 col-lg-6">
             <div class="card card-success card-inverse">
                 <div class="card-header card-success">
                     <div class="row">
@@ -47,21 +46,20 @@
                             <i class="fa fa-tasks fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-xs-right">
-                            <div class="huge">12</div>
-                            <div>New Tasks!</div>
+                            <div>Search Projects</div>
                         </div>
                     </div>
                 </div>
                 <div class="card-footer card-green">
-                    <a class="text-success" href="javascript:void(0);">
-                        <span class="pull-xs-left">View Details</span>
+                    <a class="text-success" [routerLink]="['/dashboard/projects/search']">
+                        <span class="pull-xs-left">Go!</span>
                         <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
                     </a>
                 </div>
             </div>
         </div>
-        <div class="col-xl-3 col-lg-6">
+        <div *ngIf="currentUser" class="col-xl-6 col-lg-6">
             <div class="card card-warning card-inverse">
                 <div class="card-header card-warning">
                     <div class="row">
@@ -69,21 +67,20 @@
                             <i class="fa fa-shopping-cart fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-xs-right">
-                            <div class="huge">124</div>
-                            <div>New Orders!</div>
+                            <div>My Backed Projects</div>
                         </div>
                     </div>
                 </div>
                 <div class="card-footer card-yellow">
-                    <a  class="text-warning" href="javascript:void(0);">
-                        <span class="pull-xs-left">View Details</span>
+                    <a class="text-warning" [routerLink]="['/dashboard/users/view', currentUser.Id]">
+                        <span class="pull-xs-left">Go!</span>
                         <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
                     </a>
                 </div>
             </div>
         </div>
-        <div class="col-xl-3 col-lg-6">
+        <div *ngIf="currentUser" class="col-xl-6 col-lg-6">
             <div class="card card-danger card-inverse">
                 <div class="card-header card-danger">
                     <div class="row">
@@ -91,14 +88,13 @@
                             <i class="fa fa-support fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-xs-right">
-                            <div class="huge">13</div>
-                            <div>Support Tickets!</div>
+                            <div>Create Project</div>
                         </div>
                     </div>
                 </div>
                 <div class="card-footer card-red">
-                    <a class="text-danger" href="javascript:void(0);">
-                        <span class="pull-xs-left">View Details</span>
+                    <a class="text-danger" [routerLink]="['/dashboard/projects/create']">
+                        <span class="pull-xs-left">Go!</span>
                         <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
                     </a>
@@ -106,9 +102,7 @@
             </div>
         </div>
     </div>
-    <alert *ngFor="let alert of alerts; let i = index" [type]="alert.type" dismissible="true" (close)="closeAlert(i)">
-        {{ alert?.msg }}
-    </alert>
+    
     <div class="row">
         <div class="col-lg-8">
         <div class="card card-default">
