--- a/crowd-voice-front-end-project/src/client/app/login/login.component.html
+++ b/crowd-voice-front-end-project/src/client/app/login/login.component.html
@@ -10,7 +10,7 @@
 					<div class="form-group" [ngClass]="{ 'has-error': loginUserForm.submitted && !username.valid }">
 						<label for="username">EMAIL</label>
 						<input type="text" class="form-control input-underline input-lg" 
-							name="username" id="username" placeholder="Enter yout email address..."
+							name="username" id="username" placeholder="Enter your email address..."
 							required [(ngModel)]="user.username"
 							#username="ngModel">
 						<div [hidden]="username.valid || username.pristine" class="error help-block">
